# CathShapeSense

./: CMakeLists.txt
app/: CMakeLists.txt  README.md  backEnd.cpp  backEnd.h  catheterPoints.h  dataSource.cpp  dataSource.h  dataset.cpp  dataset.h  frontEnd.cpp  frontEnd.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scenewidget.cpp  scenewidget.h
config/: DebugMode.ini  ReleaseMode.ini
data/: sensor1.txt  sensor2.txt
